Include babel-codemod to actually modify src

--- a/package.json
+++ b/package.json
@@ -16,13 +16,22 @@
     "url": "https://github.com/zzarcon/babel-plugin-promote-class-properties/issues"
   },
   "homepage": "https://github.com/zzarcon/babel-plugin-promote-class-properties#readme",
-  "devDependencies": {
-    "babel-identifiers": "^1.1.1",
+  "devDependencies": {    
     "babel-plugin-tester": "^4.0.0",
     "flow-bin": "^0.54.0",
     "jest": "^20.0.4"
   },
   "dependencies": {
+    "babel-codemod": "^1.2.0",
+    "babel-identifiers": "^1.1.1",
     "babel-type-scopes": "^1.0.0"
-  }
+  },
+  "bin": {
+    "promoteClassProperties": "./bin/promoteClassProperties"
+  },
+  "keywords": [
+    "babel",
+    "babel-plugin",
+    "babel-codemod"
+  ]
 }
